# aws-fusion

./: .editorconfig  .gitignore  .gitpod.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  main.spec  pyproject.toml  setup.py  setup.sh
.github/workflows/: publish.yml  tagging.yml
argument/: inputs.py
aws/: helper.py
aws_console/: __init__.py  aws_console_login.py  aws_operations.py  aws_session_credential.py  credentials.py  main.py  system_credential_store.py
aws_console/input_output/: browser.py  cli.py
aws_console_login/: cache.py
aws_fusion/: app.py  exceptions.py
aws_fusion/aws/: api.py  assume_role.py  session.py
aws_fusion/commands/: config_switch.py  generate_okta_device_auth_credentials.py  iam_user_credentials.py  init.py  okta.py  open_browser.py
aws_fusion/okta/: api.py
input_output/: browser.py  cli.py
